--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     background-image: url('certificate-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: Arial, sans-serif;
+    font-family:  Helvetica, sans-serif, Arial,;
     color: #000;
     font-size: 16px;
     line-height: 1.5;
@@ -20,40 +20,80 @@ body {
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
 }
 
-.header {
-    text-align: center;
-}
-
-.content {
+.logo-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-}
-
-.left {
-    width: 60%;
-}
-
-.right {
-    width: 40%;
     text-align: center;
-}
+    color: #228B22;
+  }
+  
+  .logo1,
+  .logo2 {
+    height: 100px;
+  }
+  
+  .logo1 {
+    margin-right: 10px;
+  }
+  
+  .header-title {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    color: #c94343;
+  }
+  
+
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  
+
+.container h2 {
+    text-align: center;
+    color: #228B22;
+  }
+  
+  .left-content,
+  .right-content {
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .divider {
+    flex-basis: 3px;
+    height: 250px;
+    background-color: rgb(247, 164, 12);
+  }
+  
+
 
 .footer {
     display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-}
-
-.signature {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+  
+  .signature {
+    font-weight: bold;
     text-align: center;
-}
+  }
+  
+  .note {
+    margin-top: 0px;
+    text-align: center;
+  }
 
-.signature img {
-    width: 150px;
+  .signature p,
+.note p {
+  margin: 0.25rem 0;
 }
-
-.note {
-    width: 60%;
-}
+  
