--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
     border: 2px solid #000;
     background-color: #fff;
     margin-top: 50px;
+    margin-bottom: 50px;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
 }
 
