--- a/index.css
+++ b/index.css
@@ -33,11 +33,7 @@ body {
     
   }
 
-.header-main {
-    /*border: 2px solid #c94343; */
-    padding: 0px;
-    margin: 0px;
-}
+
   
   .logo1,
   .logo2 {
@@ -54,9 +50,9 @@ body {
     text-align: center;
     margin-top: 0px;
     color: #c94343;
-    font-size: 50px;
-    
-    padding: 0px;
+    font-size: 45px;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
     margin: 0px;
     
   }
