--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
     font-size: 16px;
     line-height: 1.5; 
     position: relative;
+   
 }
 
 .certificate {
@@ -13,14 +14,16 @@ body {
     max-width: 1050px; 
     padding: 20px;
     /*border: 2px solid #000; */
-    border: 6px double red;
+    
     margin-top: 50px;
     margin-bottom: 50px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    
     background-image: url('img/Bg-edited.png');
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: contain;
+    border: 50px solid transparent;
+    border-image: url(./img/Border3.png) 30 round;
 }
 
 .logo-container {
