--- a/index.css
+++ b/index.css
@@ -155,3 +155,36 @@ span {
   height:40px
 }
  
+/* text field */
+
+.textarea{
+  text-align: center;
+}
+
+button, input{
+  background-color: inherit;
+  margin: 0.5em;
+  font-weight: 300;
+  padding: 0.5em;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.5em;
+  border: 1px solid grey;
+  border-radius: 0.2em;
+  transition: 0.3s all;
+}
+button:hover, input:hover{
+  background-color: grey;
+  color: black;
+  cursor: pointer;
+}
+button:focus{
+  outline: 0;
+}
+button:active{
+  transform: translate(0, 4px);
+}
+input:focus{
+  outline: 0;
+  background-color: white;
+  color: black;
+}
